foundation-objs/main/default/objects/Invoice__c/fields/Asset_line_open_Amount__c.field-meta.xml
<CustomField>
    <fullName>Asset_line_open_Amount__c</fullName>
    <label>Asset/line_open Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>