foundation-objs/main/default/objects/Invoice__c/fields/BP_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>BP_Reference_No__c</fullName>
    <label>BP Reference No.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>