foundation-objs/main/default/objects/Invoice__c/fields/GST_Invoice_number__c.field-meta.xml
<CustomField>
    <fullName>GST_Invoice_number__c</fullName>
    <externalId>true</externalId>
    <label>GST Invoice number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>