foundation-objs/main/default/objects/Invoice__c/fields/Raw_Total__c.field-meta.xml
<CustomField>
    <fullName>Raw_Total__c</fullName>
    <label>Raw Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>