foundation-objs/main/default/objects/Invoice__c/fields/Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax__c</fullName>
    <label>Total Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>