foundation-objs/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GST_Invoice_number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>